--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @import url(http://weloveiconfonts.com/api/?family=zocial);
 /* zocial */
 [class*="zocial-"]:before {
-  font-family: 'zocial', sans-serif;
+  font-family: "zocial", sans-serif;
 }
 
 img {
@@ -10,7 +10,7 @@ img {
 }
 
 * {
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
     color:#2d3c49;
     font-weight: 300;
 }
@@ -36,12 +36,11 @@ img {
 }
 
 hr {
-    border:2px solid #7d97ad;
+    border: 2px solid #7d97ad;
 }
 
 .text-uppercase {
     font-weight: bold;
-
 }
 
 .social {
@@ -49,22 +48,25 @@ hr {
     line-height: 2em;
     margin: 1em;
     text-align: center;
-
 }
+
 .social a {
     margin: 0 1em 0 0;
 }
+
 .social a last-of-type {
     margin: 0;
-
 }
+
 .btn {
     background-color: #7d97ad;
 }
+
 .search {
     font-size: 16px;
 }
+
 .bio {
     font-size: 16px;
-    line-height: 30px;
+    line-height: 1.6em;
 }
