--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,20 +1,16 @@
 <div class="container-fluid">
-  <div class="col-md-12 text-left text-uppercase logo border">
+  <div class="col-md-12 text-left text-uppercase">
     <header class="row">
       <nav>
         <ul class="header-nav nav-links">
-          <li><a href="/">Home</a></li>
-          <li><a href="/about">About</a></li>
-          <li><a href="/blog">blog</a></li>
-          <li><a href="{{ site.posts.first.url }}">Newest Post</a></li>
-          <li><a href="/saxalocity">Saxalocity</a></li>
-          <li><a href="/now">now</a></li>
+          {% include nav-links.html %}
         </ul>
         <h1 class="title-super text-thin">Jason Derr</h1>
       </nav>
-      </div>
       <hr>
+      </div>
     </header>
+
 
 
 
