added saxalocity layout with video player

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <footer class="row">
       <div class="col-xs-12 text-center">
+        <hr class="footer-hr">
         <div class="social">
           <a href="https://twitter.com/jason_derr" target="_blank" class="zocial-twitter"> </a>
           <a href="https://plus.google.com/109417711220822823797" class="zocial-googleplus" ></a>
