--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,9 +3,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=zocial">
-  <script src="js/jquery-3.2.0.min.js" async></script>
-  <script src="js/bootstrap.min.js" async></script>
+  <script src="/js/jquery-3.2.0.min.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
 </head>
