--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,8 @@ layout: default
 ---
 
 <div class="post">
+  <div class="half hero" style="background-image: url({{page.postHero}});">
+  </div>
   <article class="page">
     <header class="post-header">
       <h1>{{ page.title }}</h2>
