home, about, and now pages have media queries

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,12 @@
 <head>
   <title>Jason Derr</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
   <link rel="stylesheet" href="/css/bootstrap.min.css">
   <link rel="stylesheet" href="/css/main.css">
   <link rel="stylesheet" href="http://weloveiconfonts.com/api/?family=zocial">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
   <script src="/js/jquery-3.2.0.min.js"></script>
   <script src="/js/bootstrap.min.js"></script>
 </head>
