--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
     <header class="post-header">
       <h1>{{ page.title }}</h2>
       <div class="post-byline">
-        <a href="https://twitter.com/TheStoicDev" target="_blank" class="zocial-twitter"> </a>
+        <a href="https://twitter.com/TheStoicDev" target="_blank" <i class="fab fa-twitter"></i> </a>
         by: {{ page.author }}
         <span> - {{ page.date | date: '%B %d, %Y' }}</span>
       </div>
