--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,10 +2,10 @@
       <div class="col-xs-12 text-center">
         <hr class="footer-hr">
         <div class="social">
-          <a href="https://twitter.com/TheStoicDev" target="_blank" class="zocial-twitter"> </a>
-          <a href="https://plus.google.com/109417711220822823797" class="zocial-googleplus" ></a>
-          <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank" class="zocial-linkedin"></a>
-          <a href="https://github.com/stoicbum" target="_blank" class="zocial-github"></a>
+          <a href="https://twitter.com/TheStoicDev" target="_blank" <i class="fab fa-twitter"></i></a>
+          <a href="https://www.instagram.com/jasonderr/" target="_blank" <i class="fab fa-instagram"></i></a>
+          <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank" <i class="fab fa-linkedin-in"></i></a>
+          <a href="https://github.com/stoicbum" target="_blank" <i class="fab fa-github"></i></a>
         </div>
       </div>
     </footer>
